--- a/create_post.html
+++ b/create_post.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key="></script>
-    <script src="https://unpkg.com/location-picker/dist/location-picker.min.js"></script>
-    <script src="main.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="node_modules/easymde/dist/easymde.min.css" />
+    <link type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key="></link>
+    <script src="https://unpkg.com/location-picker/dist/location-picker.min.js"></script>
   </head>
 
   <body>
@@ -39,7 +38,7 @@
             </li>
           </ul>
           <button class="btn btn-dark">
-            <a aria-current="page" href="#" style="text-decoration: none; color: white !important">Register</a>
+            <a id="registerBtn" aria-current="page" href="#">Register</a>
           </button>
         </div>
       </div>
@@ -58,11 +57,11 @@
           <form action="" method="get">
             <div class="input-group mb-3">
               <span class="input-group-text text-bg-light">Location Name :</span>
-              <input type="text" name="locationName" class="form-control" />
+              <input type="text" name="locationName" class="form-control" id="locationName" />
             </div>
             <div class="input-group mb-3">
               <span class="input-group-text text-bg-light">Video Url :</span>
-              <input type="text" name="videoUrl" class="form-control" />
+              <input type="text" name="videoUrl" class="form-control" id="videoUrlField" />
             </div>
             <div class="input-group mb-3">
               <button class="btn btn-outline-secondary" id="addCategory" type="button">
@@ -90,11 +89,11 @@
                     <div class="input-group mb-3">
                       <button type="button" class="btn btn-outline-secondary" id="confirmPosition">Confirm
                         Position</button>
+                      <input readonly type="text" id="latitudeField" aria-label="Latitube" class="form-control"></input>
                       <input readonly type="text" id="longitudeField" aria-label="Longitude"
                         class="form-control"></input>
-                      <input readonly type="text" id="latitudeField" aria-label="Latitube" class="form-control"></input>
                     </div>
-                    <div id="map" class="rounded-2 border border-secondary mb-3" style="width: 100%; height: 500px">
+                    <div id="map" class="rounded-2 border border-secondary mb-3">
                     </div>
                   </div>
                   <!-- map end -->
@@ -113,8 +112,7 @@
                     <!-- body 2 -->
                     <div class="input-group mb-3">
                       <button type="button" class="btn btn-outline-secondary" id="addImage">Add Image</button>
-                      <input type="url" id="imageUrlField" aria-label="image url"
-                        class="form-control"></input>
+                      <input type="url" id="imageUrlField" aria-label="image url" class="form-control"></input>
                     </div>
                     <div class="accordion" id="innerAccordion">
                     </div>
@@ -133,7 +131,6 @@
                   <div class="accordion-body">
                     <!-- body 3 -->
                     <div class="input-group mb-3">
-                      <!-- <span class="input-group-text text-bg-light"> Overview :</span> -->
                       <div class="input-group">
                         <span class="input-group-text text-bg-light "> Overview : </span>
                         <textarea class="form-control" aria-label="overview"></textarea>
@@ -144,12 +141,23 @@
                 </div>
               </div>
             </div>
+            <div class="alert alert-danger">
+              There Should be atleast one category
+            </div>
+            <div class="alert alert-danger">
+              There are some empty fields
+            </div>
+            <div class="alert alert-danger">
+              The Article Text is too short
+            </div>
+            <button type="button" class="btn btn-info" id="submitButton">
+              Submit
+            </button>
           </form>
         </div>
         <!-- form contianer end -->
       </div>
-    </main>
-
+    </main> 
     <script src="node_modules/easymde/dist/easymde.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
